--- a/public/css/project.css
+++ b/public/css/project.css
@@ -25,16 +25,20 @@ button {
 .modal-content {
     position: absolute !important;
     top: 50%;
-    left: 50%;
+    left: 40%;
     transform: translate(-50%, -50%);
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    width: auto !important;
-    max-width: 90%; /* Limit the maximum width to 90% of the screen */
+    width: 450;
+    max-width: 1000PX;
 }
 
+.note-toolbar {
+    display: flex;
+    flex-wrap: wrap;
+}
 .close-btn {
     position: absolute;
     top: 10px;
