--- a/public/css/header.css
+++ b/public/css/header.css
@@ -9,7 +9,9 @@
     padding: 20px;
 }
 .layout .content {
-    padding: 12px 50px;
+    padding: 0px 35px;
+    margin: 0;
+    /* padding: 0; */
     display: flex;
     flex-direction: column;
 }
